# conway_game_of_life_kata

./: app.py  pyproject.toml
cgol/: board.py
tests/: test_board.py
