[tool.poetry]
name = "cgol"
version = "0.1.0"
description = ""
authors = ["Jason Klueber <jason.klueber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
